--- a/node-express/package.json
+++ b/node-express/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "NODE_ENV=development nodemon --watch index.js",
+    "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "repository": {
