feat: Add prettier setup

--- a/node-express/.eslintrc.json
+++ b/node-express/.eslintrc.json
@@ -1,29 +1,27 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+	"env": {
+		"es2021": true,
+		"node": true
+	},
+	"extends": ["eslint:recommended", "plugin:prettier/recommended"],
+	"plugins": ["prettier"],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"rules": {
+		"prettier/prettier": [
+			"error",
+			{
+				"useTabs": true,
+				"singleQuote": true,
+				"semi": true,
+				"arrowParens": "avoid"
+			}
+		],
+			"indent": ["error", "tab"],
+			"linebreak-style": ["error", "unix"],
+			"quotes": ["error", "single"],
+			"semi":  ["error", "always"]
+	}
 }
