--- a/node-express/package.json
+++ b/node-express/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "eslint": "^8.46.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.0.1"
   }
 }
