--- a/node-express/package.json
+++ b/node-express/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "NODE_ENV=development nodemon --watch index.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
+    "lint": "eslint --ext cjs,js,mjs .",
+    "lint:fix": "eslint --ext cjs,js,mjs --fix .",
     "validate-setup": "node scripts/validateSetup.cjs"
   },
   "repository": {
